// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it passes a11y on radio group 1`] = `
<div>
  <div
    class="govuk-form-group lbh-form-group"
    id="test"
  >
    <label
      class="govuk-label lbh-label"
      for="test-field"
    >
      Radios Test
      
    </label>
    <div
      class="govuk-radios lbh-radios"
      id="test-field"
    >
      <div
        class="govuk-radios__item"
      >
        <input
          class="govuk-radios__input"
          id="radio-1"
          name="test"
          type="radio"
        />
        <label
          class="govuk-label govuk-radios__label"
          for="radio-1"
        >
          Label
        </label>
      </div>
      <div
        class="govuk-radios__item"
      >
        <input
          class="govuk-radios__input"
          id="radio-2"
          name="test"
          type="radio"
        />
        <label
          class="govuk-label govuk-radios__label"
          for="radio-2"
        >
          Label2
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`it passes a11y on single radio 1`] = `
<div>
  <div
    class="govuk-form-group lbh-form-group"
    id="test"
  >
    <label
      class="govuk-label lbh-label"
      for="test-field"
    >
      Radio Test
      
    </label>
    <div
      class="govuk-radios__item"
    >
      <input
        class="govuk-radios__input"
        id="radio"
        name="test"
        type="radio"
      />
      <label
        class="govuk-label govuk-radios__label"
        for="radio"
      >
        Label
      </label>
    </div>
  </div>
</div>
`;

exports[`it renders a group of radios 1`] = `
<div>
  <div
    class="govuk-radios lbh-radios"
  >
    <div
      class="govuk-radios__item"
    >
      <input
        class="govuk-radios__input"
        id="test"
        type="radio"
      />
      <label
        class="govuk-label govuk-radios__label"
        for="test"
      >
        Label
      </label>
    </div>
    <div
      class="govuk-radios__item"
    >
      <input
        class="govuk-radios__input"
        id="test2"
        type="radio"
      />
      <label
        class="govuk-label govuk-radios__label"
        for="test2"
      >
        Label2
      </label>
    </div>
  </div>
</div>
`;

exports[`it renders a group of radios with a conditional 1`] = `
<div>
  <div
    class="govuk-radios govuk-radios--conditionals lbh-radios"
  >
    <div
      class="govuk-radios__item"
    >
      <input
        aria-controls="conditional"
        aria-expanded="false"
        class="govuk-radios__input"
        id="test"
        type="radio"
      />
      <label
        class="govuk-label govuk-radios__label"
        for="test"
      >
        Label
      </label>
    </div>
    <div
      class="govuk-radios__conditional govuk-radios__conditional--hidden"
      id="conditional"
    >
      Hello
    </div>
    <div
      class="govuk-radios__item"
    >
      <input
        class="govuk-radios__input"
        id="test2"
        type="radio"
      />
      <label
        class="govuk-label govuk-radios__label"
        for="test2"
      >
        Label2
      </label>
    </div>
  </div>
</div>
`;

exports[`it renders a group of radios with a divider 1`] = `
<div>
  <div
    class="govuk-radios lbh-radios"
  >
    <div
      class="govuk-radios__item"
    >
      <input
        class="govuk-radios__input"
        id="test"
        type="radio"
      />
      <label
        class="govuk-label govuk-radios__label"
        for="test"
      >
        Label
      </label>
    </div>
    <div
      class="govuk-radios__divider"
    >
      Or
    </div>
    <div
      class="govuk-radios__item"
    >
      <input
        class="govuk-radios__input"
        id="test2"
        type="radio"
      />
      <label
        class="govuk-label govuk-radios__label"
        for="test2"
      >
        Label2
      </label>
    </div>
  </div>
</div>
`;

exports[`it renders a radio 1`] = `
<div>
  <div
    class="govuk-radios__item"
  >
    <input
      class="govuk-radios__input"
      id="test"
      type="radio"
    />
    <label
      class="govuk-label govuk-radios__label"
      for="test"
    >
      Label
    </label>
  </div>
</div>
`;

exports[`it renders a radio with a hint 1`] = `
<div>
  <div
    class="govuk-radios__item"
  >
    <input
      aria-describedby="test-hint"
      class="govuk-radios__input"
      id="test"
      type="radio"
    />
    <label
      class="govuk-label govuk-radios__label"
      for="test"
    >
      Label
    </label>
    <span
      class="govuk-hint govuk-radios__hint"
      id="test-hint"
    >
      A short description
    </span>
  </div>
</div>
`;
